# image-api

./: .gitignore  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: image.rs  image_tag.rs  mod.rs  prelude.rs  tag.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  main.rs
src/: create_image.rs  error.rs  imagga_client.rs  main.rs  query_images.rs  routes.rs  upload_image.rs
