[package]
name = "image-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration", "entity"]

[dependencies]
migration = { path = "migration" } 
entity = { path = "entity" }
axum = "0.5.15"
tokio = {version = "1.21.0", features = ["full"]}
ureq = { version = "2.5.0", features = ["json", "tls", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print" ] }
tower = "0.4.13"
futures = "0.3.24"